<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="account">Account documents</string>
    <string name="account_blocked">Account is locked</string>
    <string name="account_does_not_exist">"Account doesn't exist"</string>
    <string name="account_number">Account-Nr.</string>
    <string name="accounts">Accounts</string>
    <string name="activate_again">Activate again</string>
    <string name="activate_by_another_user">"Mobile Payment is already activated 
by another user on this device."</string>
    <string name="activate_mobile_payment">Activate Mobile Payment</string>
    <string name="activate_or_deactivate_mba">ACTIVATE / DEACTIVATE</string>
    <string name="activation_bottom_label">Simply activate your digital Postbox in Deutsche Bank Online Banking.</string>
    <string name="activation_content">"Enjoy mobile access to all of your account, securities and credit card statements.
Anytime, anyplace – in one app."</string>
    <string name="activation_error">Unfortunately the activation was not successful.</string>
    <string name="activation_heading">Activate your Postbox</string>
    <string name="activation_pending">Your card is currently in activation for Mobile Payment. This process can take a moment.</string>
    <string name="activation_success">Card is activated for Mobile Payment.</string>
    <string name="add_first_contact">Add your first contact now</string>
    <string name="add_friend">Add contact</string>
    <string name="add_friend_button_save">Save</string>
    <string name="add_mba_account_same_user">You are currently logged in with the account you are trying to add. Adding an account more than once is not possible.</string>
    <string name="add_more_products_title">Enter Credentials</string>
    <string name="add_product_error">The aggregation of your accounts failed. Please try again later.</string>
    <string name="add_standing_order_button_next">Done</string>
    <string name="add_standing_order_error_end_date_before_start_date">"An error has occurred while processing your standing order. Please note that the start date must be before the end date and at least one day ahead of today's date."</string>
    <string name="add_standing_order_picker_hint_each_on">Each on</string>
    <string name="add_standing_order_picker_hint_first_time_on">First time on</string>
    <string name="add_standing_order_picker_hint_frequency">Frequency</string>
    <string name="add_standing_order_picker_hint_principal_account">Principal Account</string>
    <string name="add_standing_order_picker_hint_until">Until</string>
    <string name="add_standing_order_subtitle">Enter Beneficiary Data</string>
    <string name="add_standing_order_title">Add Standing Order</string>
    <string name="airplane_mode_enabled_error">Please deactivate the airplane mode to be able to activate mobile payment.</string>
    <string name="all_documents">All documents</string>
    <string name="all_institutes_name">All Institutes</string>
    <string name="amount_in_foreign_currency">Amount in foreign currency</string>
    <string name="amountbeneficiary">Amount:</string>
    <string name="analysis_cancel_button">Cancel</string>
    <string name="app_is_active">The App is active</string>
    <string name="app_name">Gini SDK</string>
    <string name="apply_for_a_card">Apply for new card</string>
    <string name="apply_for_card">"Apply now for a card that is 
mobile payment ready."</string>
    <string name="asset_class_bonds_euro">Bonds Euro</string>
    <string name="asset_class_bonds_other">Bonds Other</string>
    <string name="asset_class_bonds_overlapping">Bonds Overlapping</string>
    <string name="asset_class_bonds_rk12">Bonds Euro</string>
    <string name="asset_class_bonds_rk35">Equity USA</string>
    <string name="asset_class_bonds_usd">Bonds USD</string>
    <string name="asset_class_commodities">Commodities</string>
    <string name="asset_class_equities">Equity Germany</string>
    <string name="asset_class_equity_africa">Equity Africa</string>
    <string name="finance_planner_multi_banking">Finance Planner Multi Banking</string>
    <string name="loading">Loading…</string>
    <string name="mba_menu_consent_toggle_description">Data usage</string>
    <string name="mba_menu_institutes_header_text">INSTITUTES</string>
    <string name="menu_item_branchfinder">Branches &amp; ATMs</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_iban_bic">IBAN and BIC</string>
    <string name="menu_item_imprint">Imprint</string>
    <string name="menu_item_label_new_standing_order">New Standing Order</string>
    <string name="menu_item_label_new_transaction">New Transaction</string>
    <string name="menu_item_label_new_transfer_sepa_flow">New Transfer (new)</string>
    <string name="menu_item_label_photo_transfer">New Photo Transfer</string>
    <string name="menu_item_label_transfer_subaccount">Transfer to Subaccount</string>
    <string name="menu_item_multi_banking">Finance Planner Multi Banking</string>
    <string name="menu_item_overdraft">Overdraft Limit</string>
    <string name="menu_item_postbox">Postbox</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_version_name_prefix">Version %s</string>
    <string name="menu_item_what_is_new">"What's new?"</string>
    <string name="mock_execution_date">Execution Date:</string>
    <string name="mopay_error_execution_timeout">Network connection was interrupted. Please retry to activate mobile payment.</string>
    <string name="mopay_no_internet">Network connection was interrupted. Please retry to activate mobile payment.</string>
    <string name="mopay_verify_inputtan_message">Please enter the TAN number %1$s to activate Mobile Payment.</string>
    <string name="mopay_verify_ptan_message">Please enter the photoTAN displayed on your reader or smartphone.</string>
    <string name="mopay_verify_success_label_format">We have received your order to activate the selected card for Mobile Payment.</string>
    <string name="notification_description">Payment started. Please follow the instructions on the display of the terminal.</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="scroll_information_message">Scroll down to discover more features</string>
    <string name="scroll_information_title">Discover</string>
    <string name="second_page_subtitle">"So that you can work even more effectively,
 the menu has been given a new design."</string>
    <string name="second_page_title">"Your personal companion
 restructured and cleaned up."</string>
    <string name="selected_payment_method">Select card:</string>
    <string name="sepatransfer_error_execution_timeout">Network connection was interrupted. Please check your queued transactions.</string>
    <string name="sepatransfer_verify_inputtan_message">Please enter the TAN number %1$s to post the transfer order.</string>
    <string name="sepatransfer_verify_success_label_format">We have received your transfer order on %1$s at %2$s %3$s.</string>
    <string name="settings_item_toggle_fingerprint_login">Fingerprint Login</string>
    <string name="settings_item_toggle_fingerprint_login_description">The fingerprint login functionality can only be activated for a single user account. Only your personal fingerprints should be stored on this device.</string>
    <string name="settings_label_active">Active</string>
    <string name="settings_label_inactive">Inactive</string>
    <string name="standingorder_error_execution_timeout">Network connection was interrupted. Please check your standing orders.</string>
    <string name="standingorder_verify_inputtan_message">Please enter TAN number %1$s to place the standing order.</string>
    <string name="standingorder_verify_success_label_format">We have received your standing order on %1$s at %2$s %3$s.</string>
    <string name="card_type_format">Deutsche Bank %s</string>
    <string name="error">Fehler:</string>
    <string name="investment_no_internet">Die Netzwerkverbindung ist unterbrochen. Bitte versuchen Sie die Transaktion erneut.</string>
    <string name="none" />
    <string name="notification_title">Deutsche Bank Mobile</string>
    <string name="sell_all_verify_inputtan_message">Bitte geben Sie die TAN Nummer %1$s ein, um die Transaktion zu bestätigen.</string>
    <string name="sell_all_verify_success_label_format">Wir haben Ihren Auftrag Verkauf Alle erhalten</string>
    <string name="sell_with_costs">kpf. verkaufen</string>
    <string name="verify_ptan_message">Bitte geben Sie die Photo TAN ein.</string>
</resources>