<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/fingerprintlogin_setting_title_and_status" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.db.pwcc.dbmobile.foundation.widgets.DbTextView android:id="@id/fingerprintlogin_setting_title" android:text="@string/settings_item_toggle_fingerprint_login" style="@style/SettingsItemHeader" />
        <com.db.pwcc.dbmobile.foundation.widgets.DbTextView android:id="@id/fingerprintlogin_setting_status" android:text="@string/settings_label_inactive" android:layout_below="@id/fingerprintlogin_setting_title" style="@style/SettingsItemValue" />
        <com.db.pwcc.dbmobile.foundation.widgets.DbSwitch android:id="@id/fingerprintlogin_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <com.db.pwcc.dbmobile.foundation.widgets.DbTextView android:text="@string/settings_item_toggle_fingerprint_login_description" android:layout_below="@id/fingerprintlogin_setting_title_and_status" style="@style/SettingsItemDescription" />
</merge>