<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/layout" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.StatusBar.EventContent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image" android:layout_width="36.0dip" android:layout_height="36.0dip" android:src="@drawable/ic_mopay" android:scaleType="centerInside" android:adjustViewBounds="true" android:layout_centerVertical="true" android:contentDescription="@string/none" android:layout_marginStart="6.0dip" android:layout_marginEnd="14.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toEndOf="@id/image">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:id="@id/db_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="1.0dip" android:text="@string/notification_title" style="@android:style/TextAppearance.Medium" />
        <TextView android:textSize="12.0sp" android:id="@id/db_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notification_description" style="@android:style/TextAppearance.Small" />
    </LinearLayout>
</RelativeLayout>