<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/tutorial_fragment_one" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.db.pwcc.dbmobile.foundation.widgets.DbTextView android:textSize="@dimen/tutorial_text_size_title" android:gravity="center" android:layout_gravity="center" android:id="@id/title_first_page" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/second_page_title" android:textAlignment="center" />
    <ImageView android:layout_gravity="center" android:id="@id/imageView_first_page" android:layout_width="wrap_content" android:layout_height="0.0dip" android:src="@drawable/img_tutorial_page2" android:layout_weight="1.0" android:contentDescription="@string/app_name" />
    <com.db.pwcc.dbmobile.foundation.widgets.DbTextView android:textSize="@dimen/tutorial_text_size_description" android:textColor="@color/colorTutorialText" android:gravity="center" android:layout_gravity="center" android:id="@id/subtitle_first_page" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:text="@string/second_page_subtitle" android:textAlignment="center" />
</LinearLayout>